# stop-sound-timer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  styles.css
src/: app.rs  components.rs  lib.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: bar.rs  timer.rs
