[package]
name = "stop-sound-timer-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wasm-logger = "0.2"
log = "0.4"
stylist = { version = "0.11.0", features = ["yew_integration"] }
chrono = "0.4.24"
gloo-timers = "0.2.6"

[workspace]
members = ["src-tauri"]

[dependencies.tauri-sys]
git = "https://github.com/JonasKruckenberg/tauri-sys"
features = [
    "tauri", 
    "window"
]